# tesi_mag

./: .gitignore  .gitmodules  .submodule  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  Dockerfile_old  Dockerfile_old_v2  devcontainer.json
000_sequence/: total_simul.md
rosbags/jobot/: README.md
rosbags/mini/: README.md
rosbags/results/: print_odom_map_bag.xml  print_odom_map_csv.xml  print_odom_map_topic.xml
src/tesi_code/: CMakeLists.txt  README.md  package.xml
src/tesi_code/000_launch/: launch_seq
src/tesi_code/config/utility/: odom_config.yaml
src/tesi_code/exe_scripts/: launch_zenoh_jobot_bridge_simulation.sh  launch_zenoh_mini_bridge_simulation.sh
src/tesi_code/ign_world/: setup_ign.sh
src/tesi_code/ign_world/elettra/modelOUT/RMF-elettra-map_PT/: model.config  model.sdf
src/tesi_code/ign_world/elettra_old/: ign-elettra-map.world
src/tesi_code/launch/: 0s_ign_spawn_world_gazebo.launch.py  1s_ign_spawn_jobot_gazebo.launch.py  1s_ign_spawn_mini_gazebo.launch.py  samplig_data.launch.py
src/tesi_code/result/: README.md  elaboration_data_csv.py  filtered_odom_data2_000.csv  filtered_odom_data_000_real.csv  raw_odom_data_000_real.csv
src/tesi_code/scripts/: calculate_path.py  record_data.py  record_odom_data.py
src/tesi_code/zenoh/: README.md  dowload_zenoh_bridge.sh  install_zenoh.sh  launch_zenoh_client.sh  launch_zenoh_server.sh  launch_zenoh_server_local.sh  simul_jobot_zenoh.sh  simul_mini_zenoh.sh  simul_server_rmf_zenoh.sh
src/tesi_code/zenoh/Szenoh_config_client/: Szenoh_config_jobot_bridge.json5
src/tesi_code/zenoh/zenoh_config_client/: Szenoh_config_mini_bridge.json5  zenoh_config_jobot_bridge.json5
src/tesi_code/zenoh/zenoh_config_server/: server_config.json5  server_config_sharedata.json5
