<?xml version="1.0"?>
<package format="3">
  <name>tesi_michele</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <depend>rclpy</depend>
  <!-- dependences -->

  <!-- ekf state estimation -->
  <depend>robot_localization</depend>

  <!-- localization -->
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_lifecycle_manager</depend>

  <!-- navigation deps -->
  <depend>nav2_controller</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>


  <!-- communication protocol -->
  <depend>rmw_cyclonedds_cpp</depend>

  <!-- mapping  -->
  <depend>cartographer_ros</depend>
  <depend>cartographer</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
